--- a/cp_animate.css
+++ b/cp_animate.css
@@ -6,8 +6,8 @@
    Tutorial Case
 
    Cinema Penguin Styles for Animation
-   Author: 
-   Date:   
+   Author: Max Woods
+   Date:   1.24.19
 
    Filename: cp_animate.css
 
